# video-game-cpp

./: .clang-format  .gitignore  .valgrind.supp  CMakeLists.txt  README.md  start.sh
Afficher une fenêtre  en SDL2/: main.cpp
assets/: blockTileSheet.csv  carte.txt  map.csv  map.txt  menu_map.csv
assets/csv/: .~lock.inventory.csv#  .~lock.map.csv#  .~lock.mapBase.csv#  cam.csv  character.csv  day_night_cycle.csv  inventory.csv  map.csv  newMap.csv  ressource.json  spritesheet_data.csv
assets/img/: inventoryTile.xcf  spritesheet.xcf  toolspritesheet.xcf
assets/input/: cam.csv  character.csv  day_night_cycle.csv  inventory.csv  map.csv  monsters.csv  spritesheet_data.csv
assets/save/: cam.csv  character.csv  day_night_cycle.csv  inventory.csv  map.csv
doc/block/html/: annotated.html  block_8hpp__incl.map  cartes_8hpp_source.html  classCarte.html  classJeu.html  classPersonnage-members.html  classPersonnage.html  draw_8hpp_source.html  functions.html  jeu_8hpp_source.html  personnage_8hpp_source.html
doc/block/latex/: annotated.tex  block_8hpp__dep__incl.md5  block_8hpp__incl.md5  classCarte.tex  classJeu.tex  classPersonnage.tex
doc/carte/html/: annotated.html  block_8hpp.html  block_8hpp__dep__incl.map  block_8hpp__dep__incl.md5  cartes_8hpp_source.html  classBlock-members.html  classBlock.html  files.html  jeu_8hpp_source.html  point_8hpp_source.html  struct_8hpp_source.html
doc/carte/latex/: files.tex  refman.tex
doc/draw/html/: block_8hpp__incl.md5  block_8hpp_source.html  classJeu-members.html  classPoint-members.html  classPoint.html  const_8hpp_source.html  draw_8hpp.html  draw_8hpp__dep__incl.map  draw_8hpp__dep__incl.md5  files.html  functions_func.html  jeu_8hpp_source.html  menudata.js  structpoint-members.html
doc/draw/latex/: annotated.tex  block_8hpp.tex  classBlock.tex  draw_8hpp__dep__incl.md5  files.tex  refman.tex
doc/jeu/html/: annotated.html  block_8hpp.html  (+14 more)
include/: block.hpp  cam.hpp  cartes.hpp  character.hpp  characterRender.hpp  const.hpp  coord.hpp  createmap.hpp  dayNightCycle.hpp  draw.hpp  entity.hpp  fpsCounter.hpp  game.hpp  inventory.hpp  inventoryRender.hpp  inventoryTile.hpp  item.hpp  jeu.hpp  json.hpp  map.hpp  mapGenerator.hpp  mapRender.hpp  menu.hpp  menuPause.hpp  monster.hpp  monsterRender.hpp  otherFunctions.hpp  personnage.hpp  point.hpp  soundSettings.hpp  sprites.hpp  struct.hpp  tile.hpp  tool.hpp
include/entity/: character.hpp  entity.hpp  flying_monster.hpp  list.hpp  monster.hpp  monsters.hpp  walking_monster.hpp
include/gameplay/: craft.hpp  dayNightCycle.hpp  game.hpp  inventory.hpp  inventoryTile.hpp
include/item/: block.hpp  item.hpp  tool.hpp  weapon.hpp
include/map/: map.hpp  mapGenerator.hpp  tile.hpp
include/rendering/: characterRender.hpp  entityRender.hpp  inventoryRender.hpp  mapRender.hpp  monsterRender.hpp  renderlife.hpp
include/ui/: a.out  fpsCounter.hpp  menu.hpp  menuEnd.hpp  menuPause.hpp  soundSettings.hpp  ui.hpp
include/utils/: cam.hpp  const.hpp  coord.hpp  dd  draw.hpp  graph.hpp  list.hpp  otherFunctions.hpp  sprites.hpp  testList.cpp
map/: createmap  createmap.cpp  map.txt
src/: block.cpp  cam.cpp  cartes.cpp  character.cpp  characterRender.cpp  createmap.cpp  dayNightCycle.cpp  draw.cpp  game.cpp  inventory.cpp  inventoryRender.cpp  inventoryTile.cpp  item.cpp  jeu.cpp  main.cpp  map.cpp  mapGenerator.cpp  mapRender.cpp  menu.cpp  menuPause.cpp  monster.cpp  monsterRender.cpp  otherFunctions.cpp  personnage.cpp  point.cpp  soundSettings.cpp  tile.cpp  tool.cpp
src/entity/: character.cpp  flying_monster.cpp  list.cpp  monster.cpp  monsters.cpp  walking_monser.cpp  walking_monster.cpp
src/gameplay/: craft.cpp  dayNightCycle.cpp  game.cpp  gameIteraction.cpp  inventory.cpp  inventoryTile.cpp
src/item/: block.cpp  tool.cpp  weapon.cpp
src/map/: map.cpp  mapGenerator.cpp  tile.cpp
src/rendering/: characterRender.cpp  entityRender.cpp  inventoryRender.cpp  mapRender.cpp  monsterRender.cpp
src/ui/: menu.cpp  menuEnd.cpp  menuPause.cpp  soundSettings.cpp  ui.cpp
src/utils/: cam.cpp  draw.cpp  otherFunctions.cpp
(+276 files in other folders)
